--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
     <article id="cv">
-        
+        <header id="myHeader">
+            <img src="/profil.jpg" alt="profil" class="profil" height="140px">
+            <div class="name">
+                <h1>Zoheir Ziani</h1>
+                <p>Docteur de Physique</p>
+                <p>
+                    <a href="mailto:ziani.zoheir@gmail.com">ziani.zoheir@gmail.com</a>
+                    <br>
+                    <a href="tel:+33752823985">+33 7 52 82 39 85</a>
+                </p>
+            </div>
+        </header>
     </article>
 </body>
 </html>
