add some blocks

--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoheir Ziani CV</title>
     <link rel="stylesheet" href="/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <article id="cv">
         <header id="myHeader">
             <img src="/profil.jpg" alt="profil" class="profil" height="140px">
-            <div class="name">
-                <h1>Zoheir Ziani</h1>
-                <p>Docteur de Physique</p>
-                <p>
-                    <a href="mailto:ziani.zoheir@gmail.com">ziani.zoheir@gmail.com</a>
-                    <br>
-                    <a href="tel:+33752823985">+33 7 52 82 39 85</a>
-                </p>
-            </div>
         </header>
+        <div class="container">
+            <section>
+                <h2>A propos</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <h2>Formation</h2>
+                <h2>Expériences professionnelles</h2>
+                
+            </section>
+            <aside>
+
+            </aside>
+        </div>
     </article>
 </body>
 </html>
