--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <header id="myHeader">
             <img src="/profil.jpg" alt="profil" class="profil" height="140px">
         </header>
+        <section class="about">
+            <h2>A propos</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </section>
         <div class="container">
-            <section>
-                <h2>A propos</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                <h2>Formation</h2>
-                <h2>Expériences professionnelles</h2>
+            <section class="main">
                 
             </section>
             <aside>
