--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
                 </details>
                 <details>
                     <summary>Developpement web</summary>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <div class="web">
+                        <span><i class='bx bxl-html5 bx-sm' style="color:#E44D26" onmouseover="this.classList.toggle('bx-tada')"></i></span>
+                        <span><i class='bx bxl-css3 bx-sm' style="color:#264de4" onmouseover="this.classList.toggle('bx-tada')"></i></span>
+                        <span><i class='bx bxl-sass bx-sm'  style="color:#cc6699" onmouseover="this.classList.toggle('bx-tada')"></i></span>
+                        <span><i class='bx bxl-javascript bx-sm' style="color:#f0db4f" onmouseover="this.classList.toggle('bx-tada')"></i></span>
+                        <span><i class='bx bxl-jquery bx-sm' style="color:#0769ad" onmouseover="this.classList.toggle('bx-tada')"></i></span>
+                        <span><i class='bx bxl-bootstrap bx-sm' style="color:#563d7c" onmouseover="this.classList.toggle('bx-tada')"></i></span>
+                        <span><i class='bx bxl-git bx-sm' style="color:#f34f29" onmouseover="this.classList.toggle('bx-tada')"></i></span>
+                        <span><i class='bx bxl-visual-studio bx-sm' style="color:#0078d7" onmouseover="this.classList.toggle('bx-tada')"></i></span>
+                    </div>
                 </details>
 
                 <h2>Qualités personnelles</h2>
