--- a/index.html
+++ b/index.html
@@ -23,10 +23,59 @@
 
         <div class="row">
             <section class="main">
-                <h2>Formations</h2>
-                <p>Text...</p>
                 <h2>Expérences professionnlles</h2>
-                <p>Text...</p>
+                <div class="timeline">
+                    <ul>
+                        <li>
+                            <span>2022 - 2023</span>
+                            <h3>Chercheur postdoctoral</h3>
+                            <div class="content">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>2021 - 2022</span>
+                            <h3>ATER</h3>
+                            <div class="content">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>2018 - 2020</span>
+                            <h3>Avenue d'enseignement</h3>
+                            <div class="content">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <br>
+                <h2>Formations</h2>
+.               <div class="timeline">
+                    <ul>
+                        <li>
+                            <span>2022 - 2023</span>
+                            <h3>Chercheur postdoctoral</h3>
+                            <div class="content">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>2021 - 2022</span>
+                            <h3>ATER</h3>
+                            <div class="content">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>2018 - 2020</span>
+                            <h3>Avenue d'enseignement</h3>
+                            <div class="content">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </section>
     
             <aside>
