--- a/index.html
+++ b/index.html
@@ -51,25 +51,32 @@
                 </div>
                 <br>
                 <h2>Formations</h2>
-.               <div class="timeline">
+                <div class="timeline">
                     <ul>
                         <li>
-                            <span>2022 - 2023</span>
-                            <h3>Chercheur postdoctoral</h3>
+                            <span>2017 - 2021</span>
+                            <h3>Doctorat en physique</h3>
                             <div class="content">
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                             </div>
                         </li>
                         <li>
-                            <span>2021 - 2022</span>
-                            <h3>ATER</h3>
+                            <span>2015 - 2017</span>
+                            <h3>Master en physique</h3>
                             <div class="content">
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                             </div>
                         </li>
                         <li>
-                            <span>2018 - 2020</span>
-                            <h3>Avenue d'enseignement</h3>
+                            <span>2012 - 2015</span>
+                            <h3>Licence en physique</h3>
+                            <div class="content">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>2011 - 2012</span>
+                            <h3>Baccaleauréat scientifique</h3>
                             <div class="content">
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                             </div>
